# sumdir

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: test-lint.yml
src/: main.rs
testdata/: index.html  table.csv
testdata/archives/: sample.tar
testdata/documents/: sample.pptx  sample.rtf  sample.xls
testdata/images/: sample.tiff
