[package]
name = "sumdir"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/stchris/sumdir"
homepage = "https://github.com/stchris/sumdir"
description = "summarize a directory by file type frequency"

[dependencies]
anyhow = "1"
clap = { version = "4.5.54", features = ["derive"] }
infer = "0.16"
itertools = "0.14.0"
walkdir = "2.5.0"

[lints.clippy]
unwrap_used = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
